--- a/shop/templates/shop/profile.html
+++ b/shop/templates/shop/profile.html
@@ -8,6 +8,7 @@
 <link rel= "stylesheet" type="text/css" href="{% static 'shop/css/home.css' %}">
 <link rel= "stylesheet" type="text/css" href="{% static 'shop/css/productD.css' %}">
 <link rel= "stylesheet" type="text/css" href="{% static 'shop/css/mypage.css' %}">
+<script src="{% static 'shop/js/javascript.js' %}"></script>
 
 <!-- 서브페이지 타이틀 -->
 
@@ -28,7 +29,7 @@
 	<!-- 마이페이지 탭 메뉴 -->
 
 		<!-- 개인정보관리 -->
-		<div id="mypageTab_1" name="mypageTab_1">
+		<div id="mypageTab_2" name="mypageTab_2" style="display:show">
 
 			<a id="mypageTab2_1" href="#mypageTab_2_1" onClick="mypageSecondChangeTab('1')" class="mypageSelected2">회원정보수정</a>
 			<a id="mypageTab2_2" href="#mypageTab_2_2" onClick="mypageSecondChangeTab('2')" class="mypageUNSelected2">환불계좌관리</a>
