--- a/shop/templates/shop/order_list.html
+++ b/shop/templates/shop/order_list.html
@@ -66,7 +66,7 @@
 		
 
 {% else %}
-        <a href="{% url 'shop:products' %}">상품 담으러가기</a>
+        <a href="{% url 'shop:products' %}">상품 구매하러 가기</a>
 {% endif %}
 </div>
     </div>
