--- a/shop/templates/registration/login.html
+++ b/shop/templates/registration/login.html
@@ -24,8 +24,9 @@
           {% csrf_token %}
           {{ form.as_table }}
           </div>
+          <br>
           <div id="loginBtn">
-            <input type="submit" id="submitBtn" value="로그인" />
+            <input type="submit" style="height:80%; margin-top:20%; margin-left:10%;" id="submitBtn" value="로그인" />
           </div>      
         </form>
 
