--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -55,7 +55,7 @@
 						민속국악사 대표 조대석입니다.<br />
 						우리 소리와 우리 전통을 보급하기 위해<br />
 						항상 정성을 다하겠습니다.<br />
-						<button class="m2Btn" type="button" title="자세히보기">자세히보기</button>
+						<button class="m2Btn" type="button" onclick="location.href='{% url 'shop:info' %}'" title="자세히보기">자세히보기</button>
 					</div>
 				</div>
 				
@@ -81,7 +81,7 @@
 						대표 홍길동입니다.<br />
 						우리소리 우리전통을 보급하기 위해<br />
 						정성을 다하겠습니다.<br />
-						<button class="m2Btn" type="button" title="자세히보기">자세히보기</button>
+						<button class="m2Btn" type="button" onclick="location.href='{% url 'shop:products' %}'" title="자세히보기">자세히보기</button>
 					</div>
 				</div>
 			</div>
