edit_product_num

--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -32,7 +32,7 @@
 					{% endfor %}
 					
 				</ul>
-				<button class="m1Btn" type="button" title="전체상품보기">전체상품보기</button>
+				<button class="m1Btn" type="button" onclick="location.href='{% url 'shop:products' %}'"  title="전체상품보기">전체상품보기</button>
 			</div>
 		</div>
 	</div>
