--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -20,7 +20,7 @@
 				<ul>
 					<li><a href="{% url 'shop:info' %}" title="민속국악사">민속국악사</a></li>
 					<li><a href="{% url 'shop:products' %}" title="제품구매">제품구매</a></li>
-					<li><a href="#" title="오시는 길">오시는 길</a></li>
+					<li><a href="{% url 'shop:map' %}" title="오시는 길">오시는 길</a></li>
 				</ul>
 			</nav>
 			
