--- a/shop/templates/shop/map.html
+++ b/shop/templates/shop/map.html
@@ -41,7 +41,7 @@
         <div id="dirs">
     
             <div id="dirs_cont">
-                <img src="./map1200.png">
+				<img src="{% static 'shop/assets/map.png' %}" alt="오시는 길"/>
     
                 <!-- 1. 연락처 --> 
                 <div id="contact">
