--- a/shop/templates/shop/map.html
+++ b/shop/templates/shop/map.html
@@ -3,8 +3,9 @@
 {% extends 'shop/base.html' %}
 
 {% block content %}
-
+{% load static %}
 <style>
+
     * {
         margin: 0;
         padding: 0;
