--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -74,7 +74,7 @@
 						개포동에 위치해 있습니다.<br />
 						국악중, 국악고에서 가까운 거리에<br />
 						위치하고 있습니다.<br />
-						<button class="m2Btn" type="button" title="자세히보기">자세히보기</button>
+						<button class="m2Btn" type="button" onclick="location.href='{% url 'shop:map' %}'" title="자세히보기">자세히보기</button>
 					</div>
 					<img src="{% static 'shop/assets/m2_cont_2.png' %}" alt="민속국악사 개포점"/>
 				</div>
