--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -5,6 +5,12 @@
 {% load static %}
 <title>민속국악사</title>
 <link rel= "stylesheet" type="text/css" href="{% static 'shop/css/home.css' %}">
+<link rel= "stylesheet" type="text/css" href="{% static 'shop/css/intro.css' %}">
+<link rel= "stylesheet" type="text/css" href="{% static 'shop/css/login.css' %}">
+<link rel= "stylesheet" type="text/css" href="{% static 'shop/css/mypage.css' %}">
+<link rel= "stylesheet" type="text/css" href="{% static 'shop/css/product.css' %}">
+<link rel= "stylesheet" type="text/css" href="{% static 'shop/css/productD.css' %}">
+<link rel= "stylesheet" type="text/css" href="{% static 'shop/css/cart.css' %}">
 <script src="{% static 'shop/js/javascript.js' %}"></script>
 </head>
 
@@ -47,8 +53,7 @@
 		<div id="footer">
 			<div id="copyright">
 				제조판매업자 민속국악사  주소 서울특별시 강남구 개포동 1200-3<br/>
-				대표 홍길동  충북 음성군 맹동면 맹동산단 1길 47-71  사업자정보 000-00-0000<br/>
-				개인정보관리책임자 홍길동  문의전화 010-5271-7897<br/>
+				대표 조대석  개인정보관리책임자 조대석  문의전화 010-5271-7897 <br/>
 				2018 MINSOKGUKAKSA RIGHTS RESERVED.
 			</div>
 			<div id="footBtn">
