--- a/shop/templates/shop/order_create.html
+++ b/shop/templates/shop/order_create.html
@@ -28,7 +28,7 @@ ORDER FORM
 {% endif %}
 
 </form>
-<input type="button" onclick = "order_request();" >결제하기</input>
+<input type="button" onclick = "order_request();" value="결제하기" >결제하기</input>
 
 <button type="button" form="form_order_info">주문 하기</button>
 
